update Image Classifier

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 DL_Practice/Image Classifier/flowers/flower_data.tar.gz
 DL_Practice/Image Classifier/checkpoint.pth
 Deep Learning/Image Classifier/checkpoint.pth
+Deep Learning/Image Classifier/checkpoint_20241002.pth
